Add reporting to the intro.html

--- a/findbugs-reporter/src/html/intro.html
+++ b/findbugs-reporter/src/html/intro.html
@@ -8,9 +8,9 @@
                 <p class="title"> Summary </p>
                 <p>Project: </p>
                 <p>Number of java files: </p>
-                <p>Analysis was performed by: </p>
+                <p>Analysis was performed by: <a href="http://findbugs.sourceforge.net/">Findbugs</a></p>
                 <p>Date: </p>
-                <p>Sort findings by: 
+                <p>Group findings by: 
                         <a class="type">Type</a> 
                         <a class="cat">Category</a> 
                         <a class="sev">Severity</a> 
