--- a/findbugs-reporter/src/html/intro.html
+++ b/findbugs-reporter/src/html/intro.html
@@ -8,7 +8,7 @@
                 <p class="title"> Summary </p>
                 <p>Project: </p>
                 <p>Number of java files: </p>
-                <p>Analysis was performed by: <a href="http://findbugs.sourceforge.net/">Findbugs</a></p>
+                <p>Analysis was performed by: <a href="http://findbugs.sourceforge.net/" target="_blank">Findbugs</a></p>
                 <p>Date: </p>
                 <p>Group findings by: 
                         <a class="type">Type</a> 
