Separate runner from the main file. Add by class grouping

--- a/findbugs-reporter/src/html/index.html
+++ b/findbugs-reporter/src/html/index.html
@@ -3,19 +3,27 @@
     <head>
         <link href="reset.css" type="text/css" rel="stylesheet" />
         <link href="style.css" type="text/css" rel="stylesheet" />
+        <link rel="shortcut icon" href="ico/buggy-sm.png" />
         <meta charset="utf-8" />
-        <script type="text/javascript" src="lib/jquery.js"></script>
+        <script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="lib/jstree.js"></script>
         <script type="text/javascript" src="lib/parse.js"></script>
+        <script type="text/javascript" src="lib/main.js"></script>
         <script type="text/javascript" src="run.js"></script>
         <title>Report</title>
     </head>
     <body>
         <div id="findings" class="findings"></div>
-        <iframe id="code" class="code" name="code" src=""></iframe>
+        <iframe id="classFrame" class="classFrame" name="classFrame" onload="highlighter()" src=""></iframe>
         <div id="details" class="details">
         </div>
         <div id="more_info" class="more_info">
+        </div>
+        <div class="package_explorer">
+            <!--<frameset rows="30%,70%"> -->
+                <iframe class="packageListFrame" src="jxr/overview-frame.html" name="packageListFrame"></iframe>
+                <iframe class="packageFrame" src="jxr/allclasses-frame.html" name="packageFrame"></iframe>
+            <!--</frameset>-->
         </div>
         <!--<img class="separator" src="ico/separator.png"/> -->
     </body>
