--- a/findbugs-reporter/src/html/intro.html
+++ b/findbugs-reporter/src/html/intro.html
@@ -5,14 +5,15 @@
                 <link href="style.css" type="text/css" rel="stylesheet" />
         </head>
         <body>
-                <p class="title"> Summary </p>
-                <p>Project: </p>
-                <p>Number of java files: </p>
-                <p>Analysis was performed by: <a href="http://findbugs.sourceforge.net/" target="_blank">Findbugs</a></p>
-                <p>Date: </p>
-                <p>Group findings by: 
-                        <a class="type">Type</a> 
-                        <a class="cat">Category</a> 
-                        <a class="sev">Severity</a> 
+        	<p class="title"> Summary </p>
+        	<p>Project: </p>
+        	<p>Number of java files: </p>
+        	<p>Analysis was performed by: </p>
+        	<p>Date: </p>
+        	<p>Group findings by: 
+        		<a class="type">Type</a> 
+        		<a class="cat">Category</a> 
+        		<a class="sev">Severity</a>
+                        <a class="class">Class</a>
         </body>
 </html>
